feat: added evil hack of doom to auto join vcs and enable camera

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webcord",
   "productName": "WebCord",
-  "version": "2.0.0-beta3",
+  "version": "2.0.0-beta3-hack",
   "description": "A Discord Web App made with the Electron API.",
   "main": "sources/app/main/mainScript.js",
   "scripts": {
@@ -15,14 +15,14 @@
     "clean:linux": "rm sources/app/*.js*"
   },
   "author": {
-    "name": "SpacingBat3",
-    "email": "git@spacingbat3.anonaddy.com",
-    "url": "https://github.com/SpacingBat3"
+    "name": "shawly",
+    "email": "shawlyde@gmail.com",
+    "url": "https://github.com/shawly"
   },
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SpacingBat3/WebCord"
+    "url": "git+https://github.com/shawly/WebCord"
   },
   "bugs": {
     "url": "https://github.com/SpacingBat3/WebCord/issues"
